<resources>
    <string name="app_name">MultiChronometer</string>
    <string name="action_settings">Settings</string>

    <string name="add">Add</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="lap">Lap</string>
    <string name="reset">Reset</string>
    <string name="clear">Clear</string>
    <string name="results">Results</string>
    <string name="ok">OK</string>
    <string name="share">Share</string>
    <string name="off">off</string>
    <string name="on">on</string>

    <!-- Settings Activity Title -->
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="general_settings_header">Display settings</string>

    <string name="lefthandedui_title">Left handed UI</string>
    <string name="lefthandedui_summary">Place buttons on the %s side of the screen</string>

    <string name="intervalseconds_label">Automatic start interval</string>
    <string name="intervalseconds_summary">Number of seconds between automatic starts</string>

    <string name="timedtrial_duration_label">Timed trial duration</string>
    <string name="timedtrial_duration_summary">Duration of time trails in minutes</string>

    <!-- Welcome menu fragment -->
    <string name="text_startup_all">Start all timers the same time</string>
    <string name="text_startup_one">Start all timers one by one manually</string>
    <string name="text_startup_timed">Intervals</string>
    <string name="text_startup_timetrial">Timed trial</string>

    <!-- Startup fragment -->
    <string name="label_instructions">Press Add to create more chronometers</string>
    <string name="label_startup_type">Start chronometers</string>
    <string name="label_press_add">Press the button below to add chronometers</string>

    <!-- choose mode fragment -->
    <string name="label_choose_mode">Choose mode</string>
    <string name="button_startup_all">All at once</string>
    <string name="button_startup_one">One by one</string>
    <string name="button_startup_timed">Fixed interval</string>
    <string name="button_startup_timetrial">Timed trial</string>

    <!-- fragmnent labels and mode names -->
    <string name="welcome_fragment_label">Multi-Chrono</string>
    <string name="startup_fragment_label">Setup chonometers</string>
    <string name="overview_fragment_label">Times overview</string>
    <string name="parameters_fragment_label">Set parameters</string>

    <string name="label_mass_start">Mass start</string>
    <string name="label_one_by_one">One by one</string>
    <string name="label_timed_start">Timed start</string>
    <string name="label_timed_trial">Timed Trial</string>
    <string name="label_set_parameters">Set parameters</string>

    <!-- statistics overview fragment -->
    <string name="label_chrononame">Name</string>
    <string name="label_lapnumber">Lap Nr.</string>
    <string name="label_laptime">Lap time</string>
    <string name="label_totaltime">Total time</string>
    <string name="label_predictathlete">Predict next athlete</string>
    <string name="hint_name">Fill in the name of the athlete</string>

    <!-- content descriptions for usability -->
    <string name="content_logo">Multichorono logo</string>
    <string name="content_startall">Multichorono logo</string>
    <string name="content_startindependent">Multichorono logo</string>
    <string name="content_starttimed">Multichorono logo</string>
    <string name="content_starttrial">Multichorono logo</string>

    <string name="content_startuplistView">Area for adding chronometers</string>
    <string name="content_timedTrialDurationValue">Slider to set trial duration</string>
    <string name="content_timedtrialStartintervalValue">Slider to set start interval</string>
    <string name="content_btnStart">Start chronometer %s</string>
    <string name="content_btnLap">Lap chronometer %s</string>
    <string name="content_btnStop">Stop chronometer %s</string>
    <string name="content_btnStartAll">Start all chronometers</string>
    <string name="content_btnStopAll">Stop all chronometers</string>
    <string name="content_btnResults">Goto results</string>
    <string name="content_startuplistDelete">Delete %d</string>
    <string name="content_startuplistName">Chronometer name %d</string>
    <string name="content_resultsGraph">Graph of the results</string>
    <string name="content_resultsGrid">Overview of the results</string>
    <string name="content_countdown">countdown %s</string>
    <string name="multi">Multi</string>
    <string name="chrono">Chrono</string>
    <string name="chronograph_1">Chronograph 1</string>
    <string name="laps_00">L 00</string>
    <string name="Timer_00_00">00.00</string>
    <string name="name">Name</string>
</resources>