<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeightSmall"
    android:orientation="horizontal">


    <EditText
        android:id="@+id/txPersonName"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/content_startuplistName"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:hint="@string/hint_name"
        android:text="@string/label_chrononame" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/content_startuplistDelete" />

</LinearLayout>