<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="96dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="3dp"
            android:contentDescription="@string/content_btnStart"
            android:text="@string/start"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnLap"
            android:layout_width="96dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="3dp"
            android:text="@string/lap"
            android:visibility="visible"
            android:contentDescription="@string/content_btnLap"/>

        <TextView
            android:id="@+id/txCountdown"
            android:layout_width="96dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_countdown"
            android:fontFamily="@font/opensans"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="60sp"
            android:textStyle="bold"
            android:typeface="normal"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="3dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txChronoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chronograph_1"
                android:textColor = "?android:textColorPrimary"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txLapcount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans"
                    android:text="@string/laps_00"
                    android:textColor = "?android:textColorPrimary"
                    android:textAlignment="textStart"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txLastlap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans"
                        android:text="@string/Timer_00_00"
                        android:textColor = "?android:textColorPrimary"
                        android:textAlignment="textEnd"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txTotalTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans"
                        android:text="@string/Timer_00_00"
                        android:textColor = "?android:textColorPrimary"
                        android:textAlignment="textEnd"
                        android:textSize="20sp"
                        android:typeface="normal" />

                    <TextView
                        android:id="@+id/txCurrentTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans"
                        android:textColor = "?android:textColorPrimary"
                        android:text="@string/Timer_00_00"
                        android:textAlignment="textEnd"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

</LinearLayout>