<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:padding="8dp"
    tools:context=".ParametersFragment">


    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="textView2,timedTrialDurationValue,timedTrialDurationText"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingTop="8dp"
        android:text="@string/timedtrial_duration_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/timedTrialDurationValue"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:contentDescription="@string/content_timedTrialDurationValue"
        android:max="6"
        android:min="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <TextView
        android:id="@+id/timedTrialDurationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timedTrialDurationValue" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="textView,timedtrialStartintervalValue,timedtrialStartintervalText"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingTop="8dp"
        android:text="@string/intervalseconds_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timedTrialDurationText" />

    <SeekBar
        android:id="@+id/timedtrialStartintervalValue"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:contentDescription="@string/content_timedtrialStartintervalValue"
        android:indeterminate="false"
        android:max="6"
        android:min="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <TextView
        android:id="@+id/timedtrialStartintervalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timedtrialStartintervalValue" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupPredictSwimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="swPredictAthlete,textView3"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swPredictAthlete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minHeight="48dp"
        android:paddingTop="8dp"
        android:text="@string/label_predictathlete"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timedtrialStartintervalValue" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:paddingTop="8dp"
        android:text="@string/off"
        app:layout_constraintStart_toEndOf="@+id/swPredictAthlete"
        app:layout_constraintTop_toBottomOf="@+id/timedtrialStartintervalValue" />

    <View
        android:id="@+id/div2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_divider_size"
        android:layout_marginTop="20dp"
        android:background="?android:attr/listDivider"
        android:tag="content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swPredictAthlete" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>